--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,6 @@
         <li><a href="#sobremi">Sobre mi</a></li>
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#contacto">Contacto</a></li>
-        <li><a href="#contacto">Contacto</a></li>
       </ul>
 
     </nav>
@@ -68,17 +67,18 @@
           <img src="./imagenes/tecnologia.jpg" alt="imagen1">
           <h3>Tabla Dinámica</h3>
           <p>Desarrollo Entorno Cliente</p>
-          <a href="https://github.com/ronicleal/TablaDinamicaDOM/tree/main" target="_blank"
+          <a href=" https://ronicleal.github.io/TablaDinamicaDOM/" target="_blank"
             class="btn-vermas">Código</a>
+          
         </div>
 
         <div class="card">
           <img src="./imagenes/tecnologia.jpg" alt="imagen2">
-          <h3>Proyecto 2</h3>
-          <p>Este es un proyecto de ejemplo</p>
-          <a href="https://github.com/ronicleal/TablaDinamicaDOM/tree/main" target="_blank"
+          <h3>Guia de Estilo y Prototipo</h3>
+          <p>Diseño de Interfaces Web</p>
+          <a href="https://ronicleal.github.io/Portafolio/" target="_blank"
             class="btn-vermas">Código</a>
-          <a href="https://tuproyecto.com" target="_blank" class="btn-vermas">Prototipo</a>
+          <a href="https://www.figma.com/design/dXO5t6pfIylQGnCxSU5lcI/Prototipo-y-Gu%C3%ADa-De-Estilos?node-id=0-1&p=f&t=OyAGCGTXV5uPZw1t-0" target="_blank" class="btn-vermas">Prototipo</a>
 
         </div>
 
@@ -86,9 +86,8 @@
           <img src="./imagenes/tecnologia.jpg" alt="imagen3">
           <h3>Proyecto 3</h3>
           <p>Este es un proyecto de ejemplo</p>
-          <a href="https://github.com/ronicleal/TablaDinamicaDOM/tree/main" target="_blank"
+          <a href="" target="_blank"
             class="btn-vermas">Código</a>
-          <a href="https://tuproyecto.com" target="_blank" class="btn-vermas">Prototipo</a>
         </div>
       </div>
 
