--- a/index2.html
+++ b/index2.html
@@ -76,7 +76,7 @@
           <img src="./imagenes/tecnologia.jpg" alt="imagen2">
           <h3>Guia de Estilo y Prototipo</h3>
           <p>Diseño de Interfaces Web</p>
-          <a href="https://ronicleal.github.io/Portafolio/" target="_blank"
+          <a href="https://github.com/ronicleal/Portafolio" target="_blank"
             class="btn-vermas">Código</a>
           <a href="https://www.figma.com/design/dXO5t6pfIylQGnCxSU5lcI/Prototipo-y-Gu%C3%ADa-De-Estilos?node-id=0-1&p=f&t=OyAGCGTXV5uPZw1t-0" target="_blank" class="btn-vermas">Prototipo</a>
 
