Tarea_Gestion_Fechas

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!-- Contenedor de tarjetas -->
       <div class="cards-container">
         <div class="card">
-          <img src="./imagenes/tecnologia.jpg" alt="imagen1">
+          <img src="./imagenes/javaScript.jpg" alt="imagen1">
           <h3>Tabla Dinámica</h3>
           <p>Desarrollo Entorno Cliente</p>
           <a href=" https://ronicleal.github.io/TablaDinamicaDOM/" target="_blank"
@@ -73,8 +73,8 @@
         </div>
 
         <div class="card">
-          <img src="./imagenes/tecnologia.jpg" alt="imagen2">
-          <h3>Guia de Estilo y Prototipo</h3>
+          <img src="./imagenes/Figma.png" alt="imagen2">
+          <h3>Guía de Estilo y Prototipo</h3>
           <p>Diseño de Interfaces Web</p>
           <a href="https://github.com/ronicleal/Portafolio" target="_blank"
             class="btn-vermas">Código</a>
@@ -83,10 +83,10 @@
         </div>
 
         <div class="card">
-          <img src="./imagenes/tecnologia.jpg" alt="imagen3">
-          <h3>Proyecto 3</h3>
-          <p>Este es un proyecto de ejemplo</p>
-          <a href="" target="_blank"
+          <img src="./imagenes/gestion_fechas.jpg" alt="imagen3">
+          <h3>Gestión de Fechas</h3>
+          <p>Desarrollo Entorno Cliente</p>
+          <a href="https://github.com/ronicleal/Gestion_de_Fechas" target="_blank"
             class="btn-vermas">Código</a>
         </div>
       </div>
