Enlace_Page_Gestion_Fechas

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <img src="./imagenes/gestion_fechas.jpg" alt="imagen3">
           <h3>Gestión de Fechas</h3>
           <p>Desarrollo Entorno Cliente</p>
-          <a href="https://github.com/ronicleal/Gestion_de_Fechas" target="_blank"
+          <a href="https://ronicleal.github.io/Gestion_de_Fechas/" target="_blank"
             class="btn-vermas">Código</a>
         </div>
       </div>
