Actividad Panel de usuario

--- a/index.html
+++ b/index.html
@@ -93,6 +93,31 @@
             class="btn-vermas">Gestion Fechas</a>
 
         </div>
+
+
+         <div class="card">
+          <img src="./imagenes/juego Reino Js.avif" alt="imagen3">
+          <h3>Reino Juego JS</h3>
+          <p>Desarrollo Entorno Cliente</p>
+          <a href="https://github.com/ronicleal/Gestion_de_Fechas" target="_blank"
+            class="btn-vermas">Código</a>
+          <a href="https://ronicleal.github.io/Gestion_de_Fechas/" target="_blank"
+            class="btn-vermas">Página HTML</a>
+
+        </div>
+
+
+
+        <div class="card">
+          <img src="./imagenes/panel usuario.jpg" alt="imagen3">
+          <h3>Panel de Usuario</h3>
+          <p>Desarrollo Entorno Cliente</p>
+          <a href="https://github.com/ronicleal/Panel-de-Usario" target="_blank"
+            class="btn-vermas">Código</a>
+          <a href=" https://ronicleal.github.io/Panel-de-Usario/" target="_blank"
+            class="btn-vermas">Página HTML</a>
+
+        </div>
       </div>
 
 
