🔁Incluir Actividad del Reino js

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h3>Tabla Dinámica</h3>
           <p>Desarrollo Entorno Cliente</p>
           <a href=" https://ronicleal.github.io/TablaDinamicaDOM/" target="_blank"
-            class="btn-vermas">Código</a>
+            class="btn-vermas">Página HTML</a>
           
         </div>
 
@@ -90,7 +90,7 @@
           <a href="https://github.com/ronicleal/Gestion_de_Fechas" target="_blank"
             class="btn-vermas">Código</a>
           <a href="https://ronicleal.github.io/Gestion_de_Fechas/" target="_blank"
-            class="btn-vermas">Gestion Fechas</a>
+            class="btn-vermas">Página HTML</a>
 
         </div>
 
@@ -99,9 +99,9 @@
           <img src="./imagenes/juego Reino Js.avif" alt="imagen3">
           <h3>Reino Juego JS</h3>
           <p>Desarrollo Entorno Cliente</p>
-          <a href="https://github.com/ronicleal/Gestion_de_Fechas" target="_blank"
+          <a href="https://github.com/ronicleal/Reino-JS--Tarea" target="_blank"
             class="btn-vermas">Código</a>
-          <a href="https://ronicleal.github.io/Gestion_de_Fechas/" target="_blank"
+          <a href=" https://ronicleal.github.io/Reino-JS--Tarea/" target="_blank"
             class="btn-vermas">Página HTML</a>
 
         </div>
