--- a/index.html
+++ b/index.html
@@ -118,6 +118,21 @@
             class="btn-vermas">Página HTML</a>
 
         </div>
+
+
+        <div class="card">
+          <img src="./imagenes/Kanbah.png" alt="imagen3">
+          <h3>Tablero Kanban</h3>
+          <p>Desarrollo Entorno Cliente</p>
+          <a href="https://github.com/ronicleal/TABLERO-KANBAN" target="_blank"
+            class="btn-vermas">Código</a>
+          <a href="https://ronicleal.github.io/TABLERO-KANBAN/" target="_blank"
+            class="btn-vermas">Página HTML</a>
+
+        </div>
+
+
+
       </div>
 
 
