✅New API Gasolinera

--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
         </div>
 
 
+         <div class="card">
+          <img src="./imagenes/api-gasolineras.jpg" alt="imagen3">
+          <h3>API Gasolinera</h3>
+          <p>Desarrollo Entorno Cliente</p>
+          <a href="https://github.com/ronicleal/API-GASOLINERA" target="_blank"
+            class="btn-vermas">Código</a>
+          <a href=" https://ronicleal.github.io/API-GASOLINERA/" target="_blank"
+            class="btn-vermas">Página HTML</a>
+
+        </div>
+
+
 
       </div>
 
