✅new proyecto final Reino JS

--- a/index.html
+++ b/index.html
@@ -68,18 +68,17 @@
           <img src="./imagenes/javaScript.jpg" alt="imagen1">
           <h3>Tabla Dinámica</h3>
           <p>Desarrollo Entorno Cliente</p>
-          <a href=" https://ronicleal.github.io/TablaDinamicaDOM/" target="_blank"
-            class="btn-vermas">Página HTML</a>
-          
+          <a href=" https://ronicleal.github.io/TablaDinamicaDOM/" target="_blank" class="btn-vermas">Página HTML</a>
+
         </div>
 
         <div class="card">
           <img src="./imagenes/Figma.png" alt="imagen2">
           <h3>Guía de Estilo y Prototipo</h3>
           <p>Diseño de Interfaces Web</p>
-          <a href="https://github.com/ronicleal/Portafolio" target="_blank"
-            class="btn-vermas">Código</a>
-          <a href="https://www.figma.com/design/dXO5t6pfIylQGnCxSU5lcI/Prototipo-y-Gu%C3%ADa-De-Estilos?node-id=0-1&p=f&t=OyAGCGTXV5uPZw1t-0" target="_blank" class="btn-vermas">Prototipo</a>
+          <a href="https://github.com/ronicleal/Portafolio" target="_blank" class="btn-vermas">Código</a>
+          <a href="https://www.figma.com/design/dXO5t6pfIylQGnCxSU5lcI/Prototipo-y-Gu%C3%ADa-De-Estilos?node-id=0-1&p=f&t=OyAGCGTXV5uPZw1t-0"
+            target="_blank" class="btn-vermas">Prototipo</a>
 
         </div>
 
@@ -87,22 +86,18 @@
           <img src="./imagenes/gestion_fechas.jpg" alt="imagen3">
           <h3>Gestión de Fechas</h3>
           <p>Desarrollo Entorno Cliente</p>
-          <a href="https://github.com/ronicleal/Gestion_de_Fechas" target="_blank"
-            class="btn-vermas">Código</a>
-          <a href="https://ronicleal.github.io/Gestion_de_Fechas/" target="_blank"
-            class="btn-vermas">Página HTML</a>
+          <a href="https://github.com/ronicleal/Gestion_de_Fechas" target="_blank" class="btn-vermas">Código</a>
+          <a href="https://ronicleal.github.io/Gestion_de_Fechas/" target="_blank" class="btn-vermas">Página HTML</a>
 
         </div>
 
 
-         <div class="card">
+        <div class="card">
           <img src="./imagenes/juego Reino Js.avif" alt="imagen3">
           <h3>Reino Juego JS</h3>
           <p>Desarrollo Entorno Cliente</p>
-          <a href="https://github.com/ronicleal/Reino-JS--Tarea" target="_blank"
-            class="btn-vermas">Código</a>
-          <a href="  https://ronicleal.github.io/Reino-JS--Tarea/" target="_blank"
-            class="btn-vermas">Página HTML</a>
+          <a href="https://github.com/ronicleal/Reino-JS--Tarea" target="_blank" class="btn-vermas">Código</a>
+          <a href="  https://ronicleal.github.io/Reino-JS--Tarea/" target="_blank" class="btn-vermas">Página HTML</a>
 
         </div>
 
@@ -112,10 +107,8 @@
           <img src="./imagenes/panel usuario.jpg" alt="imagen3">
           <h3>Panel de Usuario</h3>
           <p>Desarrollo Entorno Cliente</p>
-          <a href="https://github.com/ronicleal/Panel-de-Usario" target="_blank"
-            class="btn-vermas">Código</a>
-          <a href=" https://ronicleal.github.io/Panel-de-Usario/" target="_blank"
-            class="btn-vermas">Página HTML</a>
+          <a href="https://github.com/ronicleal/Panel-de-Usario" target="_blank" class="btn-vermas">Código</a>
+          <a href=" https://ronicleal.github.io/Panel-de-Usario/" target="_blank" class="btn-vermas">Página HTML</a>
 
         </div>
 
@@ -124,22 +117,30 @@
           <img src="./imagenes/Kanbah.png" alt="imagen3">
           <h3>Tablero Kanban</h3>
           <p>Desarrollo Entorno Cliente</p>
-          <a href="https://github.com/ronicleal/TABLERO-KANBAN" target="_blank"
-            class="btn-vermas">Código</a>
-          <a href="https://ronicleal.github.io/TABLERO-KANBAN/" target="_blank"
-            class="btn-vermas">Página HTML</a>
+          <a href="https://github.com/ronicleal/TABLERO-KANBAN" target="_blank" class="btn-vermas">Código</a>
+          <a href="https://ronicleal.github.io/TABLERO-KANBAN/" target="_blank" class="btn-vermas">Página HTML</a>
 
         </div>
 
 
-         <div class="card">
+        <div class="card">
           <img src="./imagenes/api-gasolineras.jpg" alt="imagen3">
           <h3>API Gasolinera</h3>
           <p>Desarrollo Entorno Cliente</p>
-          <a href="https://github.com/ronicleal/API-GASOLINERA" target="_blank"
-            class="btn-vermas">Código</a>
-          <a href=" https://ronicleal.github.io/API-GASOLINERA/" target="_blank"
-            class="btn-vermas">Página HTML</a>
+          <a href="https://github.com/ronicleal/API-GASOLINERA" target="_blank" class="btn-vermas">Código</a>
+          <a href=" https://ronicleal.github.io/API-GASOLINERA/" target="_blank" class="btn-vermas">Página HTML</a>
+
+        </div>
+
+
+        <div class="card">
+          <img src="./imagenes/img_aventuraJS.png" alt="imagen3">
+          <h3>Proyecto Final Reino JS</h3>
+          <p>Desarrollo Entorno Cliente</p>
+          <a href="https://github.com/ronicleal/PROYECTO-FINAL-REINO-JS" target="_blank" class="btn-vermas">Código</a>
+          <a href="https://ronicleal.github.io/PROYECTO-FINAL-REINO-JS/" target="_blank" class="btn-vermas">Ejecución</a>
+          <a href="http://127.0.0.1:5502/docs/index.html" target="_blank" class="btn-vermas">JsDoc</a>
+          <a href="https://www.figma.com/design/8tdwJaHIVqr1QTvfDf3SgT/Gu%C3%ADa-de-Estilo-Reino-JS?node-id=0-1&t=M2k88PZJNifaxbXG-1" target="_blank" class="btn-vermas">Guia Estilo</a>
 
         </div>
 
